--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,16 @@ VITE_FIREBASE_PROJECT_ID=your_project_id
 VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
+
+# Google Gemini AI Configuration (Optional)
+# Get your API key from: https://makersuite.google.com/app/apikey
+# Required for AI-powered tracklist extraction
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Spotify API Configuration (Recommended)
+# Get your credentials from: https://developer.spotify.com/dashboard
+# Required for accurate BPM and Key extraction
+# 1. Create an app in Spotify Developer Dashboard
+# 2. Copy Client ID and Client Secret
+VITE_SPOTIFY_CLIENT_ID=your_spotify_client_id_here
+VITE_SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
